--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,12 @@ minecraft {
 }
 
 dependencies {
-	minecraft "com.mojang:minecraft:19w14b"
-	mappings "net.fabricmc:yarn:19w14b.4"
-	modCompile "net.fabricmc:fabric-loader:0.4.0+build.116"
+	minecraft "com.mojang:minecraft:1.14 Pre-Release 5"
+	mappings "net.fabricmc:yarn:1.14 Pre-Release 5+build.2"
+	modCompile "net.fabricmc:fabric-loader:0.4.1+build.127"
 
 	//Fabric api
-	modCompile "net.fabricmc:fabric:0.2.6.121"
+	modCompile "net.fabricmc:fabric:0.2.7+build.125"
 }
 
 // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
