--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,25 @@
 plugins {
-	id 'fabric-loom' version '0.2.3-SNAPSHOT'
+	id 'fabric-loom' version '0.2.4-SNAPSHOT'
 }
+
+apply plugin: net.fabricmc.loom.LoomGradlePlugin
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 archivesBaseName = "modid"
 version = "1.0.0"
+
+
+repositories {
+
+	maven { 
+
+		url "https://minecraft.curseforge.com/api/maven"
+
+	}
+
+}
 
 minecraft {
 }
@@ -18,6 +31,8 @@ dependencies {
 
 	//Fabric api
 	modCompile "net.fabricmc.fabric-api:fabric-api:0.3.0+build.185"
+	
+	modApi "valarlib:valar:lib:1.0.0"
 }
 
 // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
